# flatland-standalone

./: Cargo.toml  README.md
src/: flatland.rs  graphics_test.rs  input_window.rs  main.rs  surface.rs
src/handlers/: buffer.rs  compositor.rs  mod.rs  shm.rs  xdg_decoration.rs  xdg_shell.rs
