[package]
name = "flatland"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.60"
glam = { version = "0.21.3", features = ["mint"] }
image = "0.24.3"
mint = "0.5.9"
once_cell = "1.13.0"
prisma = "0.1.1"
rustc-hash = "1.1.0"
slog = "2.7.0"
slog-stdlog = "4.1.1"

[dependencies.smithay]
# git = "https://github.com/Smithay/smithay.git"
path = "../smithay"

[dependencies.stereokit]
path = "../stereokit-rs"
default-features = false
features = ["linux-egl"]
